--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
+/* header css */
+.header{
+  margin: 0 20%;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo{
+  width: 100px;
+}
+
+.logo-img{
+  max-width: 100%;
+  max-height: 100%;
+  display: block; 
+}
+
+.header input{
+  border: 1px solid black;
+  margin-top: 5px;
+  padding: 10px;
+  padding-right: 100px;
+  border-radius: 10px;
+  width: 100%;
+}
+
+.link a{
+  padding: 5px;
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+
+/* image gallery css */
+.section{
+  margin: 2% 15%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);  
+}
+
+.loading{
+  margin: 2% 15%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card{
+  width: 350px;
+  height: 300px;
+  padding: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card-img{
+  width: 100%;
+  height: 100%;
+  object-fit:cover; 
 }
