--- a/src/App.css
+++ b/src/App.css
@@ -48,10 +48,37 @@
   width: 350px;
   height: 300px;
   padding: 5px;
+  overflow: hidden;
+  transition: transform 500ms ease;
+  position: relative;
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
 }
 
 .card-img{
   width: 100%;
   height: 100%;
   object-fit:cover; 
+  border-radius: 10px;
+}
+
+
+
+/* auth css */
+.form{
+  position: fixed;
+  top: 20%;
+  left: 50%;
+}
+
+a{
+  text-decoration: none;
+}
+
+.input-container{
+  margin: 10px 0;
+}
+
+.input-container input{
+  border-radius: 5px;
+  padding: 5px;
 }
